Display direct lobby ID for copying
We can't seem to copy to clipboard through Javascript in PA

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,9 @@
   "extends": ["eslint:recommended", "plugin:lodash/v3", "prettier"],
   "globals": {
     "model": "readonly",
-    "_": "readonly"
+    "_": "readonly",
+    "loadHtml": "readonly",
+    "ko": "readonly"
   },
   "plugins": ["lodash"],
   "rules": {
